--- a/calculator.html
+++ b/calculator.html
@@ -18,6 +18,7 @@
   </style>
 </head>
 <body>
+    <h1>Simple Calculator Simple Calculator</h1>
   <h1>Simple Calculator</h1>
   <input type="number" id="num1" placeholder="Enter first number">
   <input type="number" id="num2" placeholder="Enter second number">
