Deleted subtraction feature.

--- a/calculator.html
+++ b/calculator.html
@@ -24,8 +24,8 @@
   <input type="number" id="num2" placeholder="Enter second number">
   <br>
   <button onclick="calculate('+')">+</button>
-  <button onclick="calculate('-')">-</button>
   <button onclick="calculate('*')">*</button>
+  <button onclick="calculate('/')">/</button>
   <h2 id="result">Result: </h2>
 
   <script>
@@ -41,11 +41,11 @@
           case '+':
             result = num1 + num2;
             break;
-          case '-':
-            result = num1 - num2;
-            break;
           case '*':
             result = num1 * num2;
+            break;
+          case '/':
+            result = num2 !== 0 ? num1 / num2 : 'Cannot divide by zero!';
             break;
           default:
             result = 'Invalid operation!';
