--- a/calculator.html
+++ b/calculator.html
@@ -18,12 +18,12 @@
   </style>
 </head>
 <body>
-    <h1>Simple Calculator Simple Calculator</h1>
   <h1>Simple Calculator</h1>
   <input type="number" id="num1" placeholder="Enter first number">
   <input type="number" id="num2" placeholder="Enter second number">
   <br>
   <button onclick="calculate('+')">+</button>
+  <button onclick="calculate('-')">-</button>
   <button onclick="calculate('*')">*</button>
   <button onclick="calculate('/')">/</button>
   <h2 id="result">Result: </h2>
@@ -40,6 +40,9 @@
         switch (operator) {
           case '+':
             result = num1 + num2;
+            break;
+          case '-':
+            result = num1 - num2;
             break;
           case '*':
             result = num1 * num2;
