--- a/calculator.html
+++ b/calculator.html
@@ -19,6 +19,7 @@
 </head>
 <body>
   <h1>Simple Calculator</h1>
+  <h1>Joy Aprilyn</h1>
   <input type="number" id="num1" placeholder="Enter first number">
   <input type="number" id="num2" placeholder="Enter second number">
   <br>
